Prima stesura indice degli ingredienti principali

--- a/Ricette/BBQ/bombette-pugliesi.tex
+++ b/Ricette/BBQ/bombette-pugliesi.tex
@@ -4,13 +4,13 @@
 \cooktime[Cottura]{40 minuti}
 \autore{Max}
 \begin{ingreds}
-	12 fette sottili di coppa di maiale
-	400g di pancetta
+	12 fette sottili di \index{coppa di maiale}
+	400g di \index{pancetta}
 	prezzemolo
 	aglio
 	pepe
 	sale
-	caciocavallo
+	\index{caciocavallo}
 
 \end{ingreds}
 
