--- a/Ricette/BBQ/pollo-marinato-agli-agrumi.tex
+++ b/Ricette/BBQ/pollo-marinato-agli-agrumi.tex
@@ -4,9 +4,9 @@
 \cooktime[]{50 minuti}
 \autore{Max}
 \begin{ingreds}
-	2 petti di pollo
-	2 arance
-	pangrattato
+	2 petti di \index{pollo}
+	2 \index{arance}
+	\index{pangrattato}
 	timo
 	sale
 %\columnbreak
