--- a/Ricette/Basi/besciamella.tex
+++ b/Ricette/Basi/besciamella.tex
@@ -5,7 +5,7 @@
 \autore{Max}
 \begin{ingreds}
 	% Qui gli ingredienti uno sotto all'altro
-	500g latte intero
+	500g \index{latte} intero
 	50g burro (anche meno)
 	50g farina 00
 	Noce moscata (o altri aromi)
