--- a/Ricette/Basi/sfoglia.tex
+++ b/Ricette/Basi/sfoglia.tex
@@ -5,8 +5,8 @@
 \autore{Max}
 \begin{ingreds}
 	% Qui gli ingredienti uno sotto all'altro
-	4 uova
-	400g farina 00
+	4 \index{uova}
+	400g \index{farina} 00
 
 \end{ingreds}
 
