--- a/Ricette/Dolci/barrette-energetiche.tex
+++ b/Ricette/Dolci/barrette-energetiche.tex
@@ -4,12 +4,12 @@
 \cooktime{40 minuti}
 \autore{Max}
 \begin{ingreds}
-	500g avena
-	3 banane
+	500g \index{avena}
+	3 \index{banane}
 	125g frutta secca (albicocche, uvetta o altro)
-	250g miele
-	160 burro di arachidi
-	un cucchiaino di cacao amaro
+	250g \index{miele}
+	160 \index{burro di arachidi}
+	un cucchiaino di \index{cacao} amaro
 %\columnbreak
 %\ingredients[For the Crumble Mixture:]
 
