--- a/Ricette/Dolci/biscotti-di-natale.tex
+++ b/Ricette/Dolci/biscotti-di-natale.tex
@@ -4,10 +4,10 @@
 \cooktime{25 minuti}
 \autore{Max}
 \begin{ingreds}
-	500g farina tipo 1
-	230g noci e nocciole
-	200g cioccolato
-	200g burro (puoi abbassare 180g)
+	500g \index{farina} tipo 1
+	230g \index{noci} e \index{nocciole}
+	200g \index{cioccolata}
+	200g \index{burro} (puoi abbassare 180g)
 	200g zucchero (puoi abbassare a 180g)
 	3 uova
 	1 bustina di lievito
