--- a/Ricette/Dolci/cioccolata-in-tazza.tex
+++ b/Ricette/Dolci/cioccolata-in-tazza.tex
@@ -6,10 +6,10 @@
 %\vegetarian
 %\freeze
 \begin{ingreds}
-	45g cioccolato fondente (75\%)
-	20g cacao amaro
+	45g \index{cioccolato} fondente (75\%)
+	20g \index{cacao} amaro
 	25g zucchero
-	250g latte intero
+	250g \index{latte} intero
 	10g amido di mais (facoltativo)
 	Aromi a piacere (Rum, arancia, cannella, peperoncino, ecc)
 %\columnbreak
