--- a/Ricette/Dolci/crema-pasticcera.tex
+++ b/Ricette/Dolci/crema-pasticcera.tex
@@ -6,11 +6,11 @@
 %\vegetarian
 %\freeze
 \begin{ingreds}
-	Latte
-	Uova (tuorli)
-	Zucchero semolato
-	Farina
-	Aromi (Vaniglia, limone, altro)
+	\index{latte}
+	\index{uova} (tuorli)
+	zucchero semolato
+	\index{farina} 00
+	aromi (Vaniglia, limone, altro)
 %\columnbreak
 %\ingredients[For the Crumble Mixture:]
 \end{ingreds}
