--- a/Ricette/Dolci/pancake.tex
+++ b/Ricette/Dolci/pancake.tex
@@ -4,8 +4,8 @@
 \cooktime{10 minuti}
 \autore{Max}
 \begin{ingreds}
-	200g farina
-	190g latte tiepido
+	200g \index{farina}
+	190g \index{latte} tiepido
 	30g aceto
 	25g zucchero
 	10g lievito per dolci
@@ -16,8 +16,8 @@
 	\ingredients[Farcire i pancake]
 	Frutta fresca
 	Nocciolata
-	Sciroppo d'acero
-	Zucchero a velo
+	\index{sciroppo d'acero}
+	zucchero a velo
 \end{ingreds}
 
 \begin{method}
