--- a/Ricette/Primi/lasagne.tex
+++ b/Ricette/Primi/lasagne.tex
@@ -7,35 +7,35 @@
 %\freeze
 \begin{ingreds}
 \ingredients[Per la sfoglia:]
-	3 uova
-	300g farina 00
+	3 \index{uova}
+	300g \index{farina} 00
 \ingredients[Per la besciamella:]
-	750g latte intero
-	75g farina
+	750g \index{latte} intero
+	75g \index{farina}
 	50g burro
 	sale 
 	noce moscata
 
 \columnbreak
-	Parmigiano Reggiano grattugiato
+	\index{Parmigiano Reggiano} grattugiato
 
 \ingredients[Per il ragu:]
-	500g di macinato di manzo
+	500g di \index{macinato} di manzo
 	1 carota
 	1 gambo di sedano
 	1 cipolla
 	1 bicchiere di vino rosso
 	Passata di pomodoro
-	Aromi a priacere
+	Aromi a piacere
 
 \end{ingreds}
 
 \begin{method}
-Per prima cosa prepara il ragù. Fai soffriggere a fuoco vivo la carne macinata, poi aggiungi sedano, carota e cipolla tritati finemente. Quando il tutto è ben rosolato fai sfumare con un bicchiere di vino rocco corposo. Fai evaporare l'alcool e aggiungi poca passata di pomodoro. Aggiungi eventuali aromi (alloro, ginepro, chiudi di garofano). Metti il coperchio e cuoci per un paio d'ore a fuoco molto basso.
+Per prima cosa prepara il \index{ragù}. Fai soffriggere a fuoco vivo la carne macinata, poi aggiungi sedano, carota e cipolla tritati finemente. Quando il tutto è ben rosolato fai sfumare con un bicchiere di vino rocco corposo. Fai evaporare l'alcool e aggiungi poca passata di pomodoro. Aggiungi eventuali aromi (alloro, ginepro, chiudi di garofano). Metti il coperchio e cuoci per un paio d'ore a fuoco molto basso.
 
-Prepara la sfoglia impastando le uova con la farina. Avvolgi in una pellicola e lascia riposare in frigorifero.
+Prepara la \index{sfoglia} impastando le uova con la farina. Avvolgi in una pellicola e lascia riposare in frigorifero.
 
-Prepara la besciamella (Vedi anche ricetta \ref{besciamella}). Sciogli il burro in una casseruola, aggiungi la farina e fai imbiondire. Scalda il latte senza raggiungere il bollore. Aggiungine poco nel tegame con la farina e mescola con una frusta. Continua ad aggiungere e mescolare per evitare la formazione di grumi. Porta a cottura la besciamella fino a raggiungere una consistenza cremosa. Regola di sale e aggiungi la noce moscata.
+Prepara la \index{besciamella} (Vedi anche ricetta \ref{besciamella}). Sciogli il burro in una casseruola, aggiungi la farina e fai imbiondire. Scalda il latte senza raggiungere il bollore. Aggiungine poco nel tegame con la farina e mescola con una frusta. Continua ad aggiungere e mescolare per evitare la formazione di grumi. Porta a cottura la besciamella fino a raggiungere una consistenza cremosa. Regola di sale e aggiungi la noce moscata.
 
 Tira la pasta con la macchinetta fino a raggiungere la penultima misura, ma ripassando 2 volte. Sbollenta la pasta per pochi minuti, poi stendi su un canovaccio.
 
