--- a/Ricette/Primi/penne-ubriaca.tex
+++ b/Ricette/Primi/penne-ubriaca.tex
@@ -6,10 +6,10 @@
 %\freeze
 \begin{ingreds}
 	500g di penne
-	500g di panna fresca
-	2 salsicce
-	2 fette di speck
-	1 bottiglia di lambrusco secco e corposo
+	500g di \index{panna} fresca
+	2 \index{salsicce}
+	2 fette di \index{speck}
+	1 bottiglia di \index{lambrusco} secco e corposo
 	Parmigiano Reggiano
 %\columnbreak
 %\ingredients[For the Crumble Mixture:]
