--- a/Ricette/Primi/pesto-cappelletti.tex
+++ b/Ricette/Primi/pesto-cappelletti.tex
@@ -4,14 +4,14 @@
 \cooktime[]{50 minuti}%<-----Tempo di cottura
 \autore{Max (Nonna Giuli)}
 \begin{ingreds}
-	250g macinato misto
-	120g gambetto di prosciutto
-	120g mortadella
+	250g \index{macinato} misto
+	120g \index{gambetto} di prosciutto
+	120g \index{mortadella}
 	sedano
 	cipolla
 	burro
-	2 uova
-	Parmigiano Reggiano grattugiato
+	2 \index{uova}
+	\index{Parmigiano Reggiano} grattugiato
 	Pangrattato (se necessario)
 
 \end{ingreds}
