--- a/Ricette/Primi/risotto-alla-gallinella.tex
+++ b/Ricette/Primi/risotto-alla-gallinella.tex
@@ -4,8 +4,8 @@
 \cooktime[Cottura]{30 minuti}
 \autore{Max}
 \begin{ingreds}
-	350g di riso carnaroli
-	4 gallinelle di mare di media pezzatura
+	350g \index{riso} carnaroli
+	4 \index{gallinelle di mare} di media pezzatura
 	1 bicchiere di vino bianco
 	1 scalogno
 	Prezzemolo
