--- a/Ricette/Salse/cipolle-caramellate.tex
+++ b/Ricette/Salse/cipolle-caramellate.tex
@@ -6,7 +6,7 @@
 %\vegetarian
 %\freeze
 \begin{ingreds}
-	500g di cipolle rosse
+	500g di \index{cipolle} rosse
 	100g di zucchero
 	30g di aceto
 	un pizzico di sale
