--- a/Ricette/Secondi-di-carne/nuggets-di-pollo.tex
+++ b/Ricette/Secondi-di-carne/nuggets-di-pollo.tex
@@ -4,10 +4,10 @@
 \cooktime{4 minuti}
 \autore{Max}
 \begin{ingreds}
-	500g di petto di pollo
-	45g di cipolla bianca
+	500g di petto di \index{pollo}
+	45g di \index{cipolla} bianca
 	poco aglio
-	80g di pancarré o pane secco
+	80g di \index{pancarré} o pangrattato
 	1 cucchiaino di sale fino
 	1 cucchiaino di senape
 	2 cucchiai di salsa di soia
@@ -18,7 +18,7 @@
 	80g di latte
 	1 uovo
 	un pizzico di sale fino
-	pangrattato
+	\index{pangrattato}
 \end{ingreds}
 
 \begin{method}
