--- a/Ricette/Secondi-di-carne/polpettone.tex
+++ b/Ricette/Secondi-di-carne/polpettone.tex
@@ -4,17 +4,17 @@
 \cooktime{45 minuti}
 \autore{Max}
 \begin{ingreds}
-	600g di macinato di manzo + una salsiccia di maiale
-	pecorino grattugiato
-	parmigiano grattugiato
+	600g di \index{macinato} di manzo + una \index{salsiccia} di maiale
+	\index{pecorino} grattugiato
+	\index{Parmigiano Reggiano} grattugiato
 	pane ammollato nel latte
-	2 uova
+	2 \index{uova}
 	sale
 	pepe
 	prezzemolo, timo o altre erbe aromatiche
-	prosciutto cotto
-	provola o scamorza
-	pangrattato
+	\index{prosciutto cotto}
+	\index{provola} o scamorza
+	\index{pangrattato}
 \end{ingreds}
 
 \begin{method}
