--- a/Ricette/Secondi-di-pesce/pesce-spada-al-salmoriglio.tex
+++ b/Ricette/Secondi-di-pesce/pesce-spada-al-salmoriglio.tex
@@ -5,7 +5,7 @@
 \autore{Max}
 \begin{ingreds}
 	\ingredients[Per il salmoriglio:]
-	1 limone con buccia edibile
+	1 \index{limone} con buccia edibile
 	1/2 bicchiere di olio e.v.o.
 	2 foglie di alloro
 	1 spicchio d'aglio
@@ -13,7 +13,7 @@
 	pepe
 	sale
 \columnbreak
-     	600g Pesce spada
+     	600g \index{pesce spada}
      	Olio e.v.o.
 	Sale
 \end{ingreds}
