--- a/Ricette/Antipasti/mini-hamburger-di-orata.tex
+++ b/Ricette/Antipasti/mini-hamburger-di-orata.tex
@@ -4,7 +4,7 @@
 \cooktime{5 minuti}
 \autore{Max}
 \begin{ingreds}
-	200g orata
+	200g \index{orata}
 	4 foglie di alloro
 	1 pezzo di porro
 	Pane da hamburgher (Vedi ricetta \ref{panini-hamburger})
