--- a/Ricette/Dolci/bigne.tex
+++ b/Ricette/Dolci/bigne.tex
@@ -7,8 +7,8 @@
 %\freeze
 \begin{ingreds}
 	4 uova (210g)
-	130g farina 00
-	100g burro
+	130g \index{farina} 00
+	100g \index{burro}
 	5g zucchero semolato
 	200g acqua
 	un pizzico di sale
