--- a/Ricette/Dolci/cassatine-siciliane.tex
+++ b/Ricette/Dolci/cassatine-siciliane.tex
@@ -56,6 +56,6 @@
 
 \end{method}
 
-\showit[2.25in]{img/cassatina}{Assemblaggio della cassatina}
+\showit[2.25in]{img/cassatina.png}{Assemblaggio della cassatina}
 
 
