--- a/Ricette/Dolci/crostata-di-limone.tex
+++ b/Ricette/Dolci/crostata-di-limone.tex
@@ -6,14 +6,14 @@
 %\vegetarian
 %\freeze
 \begin{ingreds}
-	200g mandorle tritate (o farina di mandorle)
+	200g mandorle tritate (o \index{farina di mandorle})
 	200g zucchero
-	3 uova
+	3 \index{uova}
 	pasta frolla (realizzata con un uovo)
 	buccia di 2 limone
-	marmellata
-	cacao amaro
-	un bicchiere di sassolino
+	\index{marmellata}
+	\index{cacao} amaro
+	un bicchiere di \index{sassolino}
 
 %\columnbreak
 %\ingredients[For the Crumble Mixture:]
