--- a/Ricette/Primi/carbonara.tex
+++ b/Ricette/Primi/carbonara.tex
@@ -7,11 +7,11 @@
 %\freeze
 \begin{ingreds}
 	% Qui gli ingredienti uno sotto all'altro
-	500g di spaghetti
+	500g di \index{spaghetti}
 	4 tuorli
-	2 uova intere
-	2 fette di guanciale
-	100g di pecorino romano
+	2 \index{uova} intere
+	2 fette di \index{guanciale}
+	100g di \index{pecorino} romano
 	pepe nero
 % Se vuoi aggiungere gli ingredienti per una preparazione
 % specifica della ricetta usa questi 2 comandi
