--- a/Ricette/Primi/penne-rosa.tex
+++ b/Ricette/Primi/penne-rosa.tex
@@ -6,9 +6,9 @@
 \begin{ingreds}
 	% Qui gli ingredienti uno sotto all'altro
 	500g penne
-	500g panna fresca
-	2 fette di pancetta
-	1 cucchiaio di concentrato di pomodoro
+	500g \index{panna} fresca
+	2 fette di \index{pancetta}
+	1 cucchiaio di \index{concentrato di pomodoro}
 	origano
 	aglio
 
