--- a/Ricette/Salse/salsa-bbq.tex
+++ b/Ricette/Salse/salsa-bbq.tex
@@ -4,15 +4,15 @@
 \cooktime{10 minuti}
 \autore{Max}
 \begin{ingreds}
-	200g di doppio concentrato di pomodoro
-	200g di miele
+	200g di doppio \index{concentrato di pomodoro}
+	200g di \index{miele}
 	130g di aceto di mele
-	70g di salsa worchester
+	70g di \index{salsa worchester}
 	1 cucchiaio di senape
 	40g di zucchero
 	15g di sale
-	1,2g di xantana
-	mezza cipolla
+	1,2g di \index{xantana}
+	mezza \index{cipolla}
 	2 spicchi d'aglio
 	noce moscata
 	pimento o altre spezie a piacere
