--- a/Ricette/Secondi-di-pesce/baccala-mantecato.tex
+++ b/Ricette/Secondi-di-pesce/baccala-mantecato.tex
@@ -4,8 +4,8 @@
 \cooktime[Cottura]{20 minuti}
 \autore{Max}
 \begin{ingreds}
-	1 filetto di baccalà
-	500g latte intero
+	1 filetto di \index{baccalà}
+	500g \index{latte} intero
 	3 spicchi d'aglio
 	1 gambo di sedano
 	1 carota
