--- a/Ricette/CBT/beef-ribs.tex
+++ b/Ricette/CBT/beef-ribs.tex
@@ -6,14 +6,14 @@
 %\vegetarian
 %\freeze
 \begin{ingreds}
-	Biancostato di manzo (molto marezzato)	
-	Rub (Vedi ricetta \ref{rub:magic-dust})
-	Vino rosso
-	Burro
-	Cipolla
-	Patate
-	Erbe amare
-	Maizena
+	\index{biancostato di manzo} (molto marezzato)	
+	rub (Vedi ricetta \ref{rub:magic-dust})
+	vino rosso
+	\index{burro}
+	\index{cipolla}
+	\index{patate}
+	\index{cime di rapa} (o altre erbe amare)
+	\index{maizena}
 %\columnbreak
 %\ingredients[For the Crumble Mixture:]
 
