--- a/Ricette/CBT/vitello-tonnato-cbt.tex
+++ b/Ricette/CBT/vitello-tonnato-cbt.tex
@@ -4,14 +4,14 @@
 \cooktime{30 minuti}
 \autore{Max}
 \begin{ingreds}
-	500g di girello di vitello
+	500g di \index{girello di vitello}
 	erbe aromatiche
-	maionese
-	pan grattato
-	peperoncino
-	capperi sott'aceto
-	acciughe
-	cetriolini sott'aceto
+	\index{maionese}
+	\index{pangrattato}
+	\index{peperoncino}
+	\index{capperi} sott'aceto
+	\index{acciughe}
+	\index{cetriolini sott'aceto}
 	olio evo
 \end{ingreds}
 
