--- a/Ricette/CBT/stinco-di-maiale-cbt.tex
+++ b/Ricette/CBT/stinco-di-maiale-cbt.tex
@@ -5,26 +5,26 @@
 \autore{Max}
 \begin{ingreds}
 	\ingredients[Per la cottura dello stinco:]
-	2 stinchi di maiale
-	2 cucchiai di senape
+	2 \index{stinchi di maiale}
+	2 cucchiai di \index{senape}
 	2 cucchiai di rub (vedi ricetta \ref{rub:magic-dust})
 	salsa bbq
 	\ingredients[Per la salsa dello stinco:]
-	1/2 costa di sedano
-	1/2 carota
-	1/2 cipolla
+	1/2 costa di \index{sedano}
+	1/2 \index{carota}
+	1/2 \index{cipolla}
 	1 bicchiere di vino rosso
-	1 cucchiaio di farina
+	1 cucchiaio di \index{farina}
 
 \columnbreak
 	\ingredients[Per la salamoia]
 	1l acqua
 	20g sale
-	10g miele
-	8 cucchiai di aceto
-	3 foglie di alloro
-	2 bacche di ginepro
-	1 stella di anice
+	10g \index{miele}
+	8 cucchiai di \index{aceto}
+	3 foglie di \index{alloro}
+	2 bacche di \index{ginepro}
+	1 stella di \index{anice}
 	8 cucchiai di aceto
 \end{ingreds}
 
@@ -33,14 +33,14 @@ Il \underline{primo giorno}. Prepara la salamoia mettendo a bollire per alcuni m
 
 Il \underline{secondo giorno}. Scola gli stinchi dalla salamoia e asciugali con cura. Cospargi la superficie con un leggero strato di senape e successivamente il rub che dovrà contenere sale, paprika, zucchero e aromi. Metti sotto vuoto gli stinchi separatamente e cuochi in un bagno termostatico alla temperatura di \temp{68} per 24 ore.
 
-Il \underline{terzo giorno}. Togli gli stinchi dal bagno termostatico e immergi in acqua, ghiaccio e sale per abbassare la temperatura più rapidamente possibile. Il bagno di acqua fredda dovrebbe essere ad una temperatura uguale o inferiore a \temp{3}. Lascia in bagno per un ora o più poi metti in frigo per almento 1 giorno.
+Il \underline{terzo giorno}. Togli gli stinchi dal bagno termostatico e immergi in acqua, ghiaccio e sale per abbassare la temperatura più rapidamente possibile. Il bagno di acqua fredda dovrebbe essere ad una temperatura uguale o inferiore a \temp{3}. Lascia in bagno per un ora o più poi metti in frigo per almeno 1 giorno.
 
-Il \underline{quarto giorno} (o quando decidi di mangiare gli stinchi). Riscalda il forno a \temp{250} in modalità ventilata. Togli gli stinchi dalle buste sottovuoto e recupera tutti i liquidi. Asciuga gli stinchi e cospargili di olio e infornali fino a che non raggiungono la temperatura al cuore di \temp{45}. Occorreranno circa 35 minuti. Se vuoi gli untimi 5 minuti puoi cospargere gli stinchi di salsa bbq e riprendere la cottura.
+Il \underline{quarto giorno} (o quando decidi di mangiare gli stinchi). Riscalda il forno a \temp{250} in modalità ventilata. Togli gli stinchi dalle buste sottovuoto e recupera tutti i liquidi. Asciuga gli stinchi e cospargili di olio e infornali fino a che non raggiungono la temperatura al cuore di \temp{45}. Occorreranno circa 35 minuti. Se vuoi gli ultimi 5 minuti puoi cospargere gli stinchi di salsa bbq e riprendere la cottura.
 
-In una padella antiaderente fai un soffritto di sedano, carota e cipolla. Aggiuggi una spolverata di farina, fai sfumare con il vino rosso, poi aggiungi i liquidi di cottura degli stinchi. Quando hai raggiunto la consistenza desiderata frulla la salsa.
+In una padella antiaderente fai un soffritto di sedano, carota e cipolla. Aggiungi una spolverata di farina, fai sfumare con il vino rosso, poi aggiungi i liquidi di cottura degli stinchi. Quando hai raggiunto la consistenza desiderata frulla la salsa.
 
 Metti gli stinchi nel piatto e cospargi con la salsa al vino rosso.
-\end {method}
+\end{method}
 
 
 
