Corretto casino con indice analitico

--- a/Ricette/Antipasti/mini-hamburger-di-orata.tex
+++ b/Ricette/Antipasti/mini-hamburger-di-orata.tex
@@ -4,9 +4,9 @@
 \cooktime{5 minuti}
 \autore{Max}
 \begin{ingreds}
-	200g \index{orata}
-	4 foglie di alloro
-	1 pezzo di porro
+	200g orata \index{orata}
+	4 foglie di alloro \index{alloro}
+	1 pezzo di porro \index{porro}
 	Pane da hamburgher (Vedi ricetta \ref{panini-hamburger})
 	
 \columnbreak
