--- a/Ricette/BBQ/eliche-di-pollo-al-curry.tex
+++ b/Ricette/BBQ/eliche-di-pollo-al-curry.tex
@@ -4,11 +4,11 @@
 \cooktime[]{6 minuti}
 \autore{Max}
 \begin{ingreds}
-	1 petto di \index{pollo}
+	1 petto di pollo \index{pollo}
 	mezzo cucchiaino di sale
-	un cucchiaino \index{curry}
+	un cucchiaino curry \index{curry}
 	olio evo
-	\index{pangrattato}
+	pangrattato \index{pangrattato}
 \end{ingreds}
 
 \begin{method}
