--- a/Ricette/BBQ/involtini-alla-siciliana.tex
+++ b/Ricette/BBQ/involtini-alla-siciliana.tex
@@ -4,15 +4,15 @@
 \cooktime[Cottura]{15 minuti}
 \autore{Max}
 \begin{ingreds}
-	6 fette di carpaccio di manzo
-	una cipolla rossa
-	scamorza
-	prosciutto cotto 
-	uvetta
-	pane raffermo
-	pangrattato
-	un bicchiere di latte
-	12 foglie di alloro
+	6 fette di carpaccio di manzo  \index{carpaccio di manzo}
+	una cipolla rossa \index{cipolla}
+	scamorza \index{scamorza}
+	prosciutto cotto \index{prosciutto cotto} 
+	uvetta \index{uvetta}
+	pane raffermo \index{pane raffermo}
+	pangrattato \index{pangrattato}
+	un bicchiere di latte \index{latte}
+	12 foglie di alloro \index{alloro}
 	sale
 	pepe
 \end{ingreds}
