--- a/Ricette/BBQ/pollo-marinato-agli-agrumi.tex
+++ b/Ricette/BBQ/pollo-marinato-agli-agrumi.tex
@@ -4,9 +4,9 @@
 \cooktime[]{50 minuti}
 \autore{Max}
 \begin{ingreds}
-	2 petti di \index{pollo}
-	2 \index{arance}
-	\index{pangrattato}
+	2 petti di pollo \index{pollo}
+	2 arance \index{arance}
+	pangrattato \index{pangrattato}
 	timo
 	sale
 %\columnbreak
