--- a/Ricette/BBQ/smoked-chicken-wings.tex
+++ b/Ricette/BBQ/smoked-chicken-wings.tex
@@ -4,19 +4,19 @@
 \cooktime[Cottura]{40 minuti}
 \autore{Max}
 \begin{ingreds}
-	12 ali di pollo
+	12 ali di pollo \index{pollo}
 	Salsa BBQ (Vedi ricetta \ref{salsa-bbq})
 
 \columnbreak
 \ingredients[Per la marinatura:]
 	175g di burro
-	1 cucchiaio abbondante di paprika
-	mezzo bicchiere di aceto di mele
-	1 cucchiaino di senape
+	1 cucchiaio abbondante di paprika \index{paprika}
+	mezzo bicchiere di aceto di mele \index{aceto di mele}
+	1 cucchiaino di senape \index{senape}
 	1 cucchiaino di sale
 	1 cucchiaio di zucchero semolato
-	1 bicchiere di brandy
-	1 cucchiaino di concentrato di pomodoro
+	1 bicchiere di brandy \index{brandy}
+	1 cucchiaino di concentrato di pomodoro \index{concentrato di pomodoro}
 \end{ingreds}
 
 \begin{method}
