--- a/Ricette/Basi/besciamella.tex
+++ b/Ricette/Basi/besciamella.tex
@@ -5,9 +5,9 @@
 \autore{Max}
 \begin{ingreds}
 	% Qui gli ingredienti uno sotto all'altro
-	500g \index{latte} intero
-	50g burro (anche meno)
-	50g farina 00
+	500g latte intero\index{latte}
+	50g burro (anche meno)\index{burro}
+	50g farina 00\index{farina}
 	Noce moscata (o altri aromi)
 	Sale
 
