--- a/Ricette/CBT/beef-ribs.tex
+++ b/Ricette/CBT/beef-ribs.tex
@@ -6,14 +6,14 @@
 %\vegetarian
 %\freeze
 \begin{ingreds}
-	\index{biancostato di manzo} (molto marezzato)	
+	biancostato di manzo (molto marezzato) \index{biancostato di manzo}
 	rub (Vedi ricetta \ref{rub:magic-dust})
 	vino rosso
-	\index{burro}
-	\index{cipolla}
-	\index{patate}
-	\index{cime di rapa} (o altre erbe amare)
-	\index{maizena}
+	burro \index{burro}
+	cipolla \index{cipolla}
+	patate \index{patate}
+	cime di rapa \index{cime di rapa} (o altre erbe amare)
+	maizena \index{maizena}
 %\columnbreak
 %\ingredients[For the Crumble Mixture:]
 
