--- a/Ricette/CBT/stinco-di-maiale-cbt.tex
+++ b/Ricette/CBT/stinco-di-maiale-cbt.tex
@@ -5,26 +5,26 @@
 \autore{Max}
 \begin{ingreds}
 	\ingredients[Per la cottura dello stinco:]
-	2 \index{stinchi di maiale}
-	2 cucchiai di \index{senape}
+	2 stinchi di maiale \index{stinco di maiale}
+	2 cucchiai di senape \index{senape}
 	2 cucchiai di rub (vedi ricetta \ref{rub:magic-dust})
 	salsa bbq
 	\ingredients[Per la salsa dello stinco:]
-	1/2 costa di \index{sedano}
-	1/2 \index{carota}
-	1/2 \index{cipolla}
+	1/2 costa di sedano \index{sedano}
+	1/2 carota \index{carota}
+	1/2 cipolla \index{cipolla}
 	1 bicchiere di vino rosso
-	1 cucchiaio di \index{farina}
+	1 cucchiaio di farina \index{farina}
 
 \columnbreak
 	\ingredients[Per la salamoia]
 	1l acqua
 	20g sale
-	10g \index{miele}
-	8 cucchiai di \index{aceto}
-	3 foglie di \index{alloro}
-	2 bacche di \index{ginepro}
-	1 stella di \index{anice}
+	10g miele \index{miele}
+	8 cucchiai di aceto \index{aceto}
+	3 foglie di alloro \index{alloro}
+	2 bacche di ginepro \index{ginepro}
+	1 stella di anice \index{anice}
 	8 cucchiai di aceto
 \end{ingreds}
 
