--- a/Ricette/CBT/vitello-tonnato-cbt.tex
+++ b/Ricette/CBT/vitello-tonnato-cbt.tex
@@ -4,14 +4,14 @@
 \cooktime{30 minuti}
 \autore{Max}
 \begin{ingreds}
-	500g di \index{girello di vitello}
+	500g girello di vitello \index{girello di vitello}
 	erbe aromatiche
-	\index{maionese}
-	\index{pangrattato}
-	\index{peperoncino}
-	\index{capperi} sott'aceto
-	\index{acciughe}
-	\index{cetriolini sott'aceto}
+	maionese \index{maionese}
+	pangrattato \index{pangrattato}
+	peperoncino \index{peperoncino}
+	capperi \index{capperi} sott'aceto
+	acciughe \index{acciughe}
+	cetriolini sott'aceto \index{cetriolini sott'aceto}
 	olio evo
 \end{ingreds}
 
