--- a/Ricette/Dolci/barrette-energetiche.tex
+++ b/Ricette/Dolci/barrette-energetiche.tex
@@ -4,12 +4,12 @@
 \cooktime{40 minuti}
 \autore{Max}
 \begin{ingreds}
-	500g \index{avena}
-	3 \index{banane}
+	500g avena \index{avena}
+	3 banane \index{banane}
 	125g frutta secca (albicocche, uvetta o altro)
-	250g \index{miele}
-	160 \index{burro di arachidi}
-	un cucchiaino di \index{cacao} amaro
+	250g miele \index{miele}
+	160 burro di arachidi \index{burro di arachidi}
+	un cucchiaino di cacao\index{cacao} amaro
 %\columnbreak
 %\ingredients[For the Crumble Mixture:]
 
