--- a/Ricette/Dolci/biscotti-di-natale.tex
+++ b/Ricette/Dolci/biscotti-di-natale.tex
@@ -4,12 +4,12 @@
 \cooktime{25 minuti}
 \autore{Max}
 \begin{ingreds}
-	500g \index{farina} tipo 1
-	230g \index{noci} e \index{nocciole}
-	200g \index{cioccolata}
-	200g \index{burro} (puoi abbassare 180g)
+	500g farina \index{farina} tipo 1
+	230g noci\index{noci} e \index{nocciole}
+	200g cioccolata\index{cioccolata}
+	200g burro\index{burro} (puoi abbassare 180g)
 	200g zucchero (puoi abbassare a 180g)
-	3 uova
+	3 uova \index{uova}
 	1 bustina di lievito
 	un pizzico di sale
 	aromi (vanillina, vaniglia, limone)
