--- a/Ricette/Dolci/cassatine-siciliane.tex
+++ b/Ricette/Dolci/cassatine-siciliane.tex
@@ -7,21 +7,21 @@
 %\freeze
 \begin{ingreds}
 \ingredients[Pasta di mandorle:]
-	150g farina di mandorle
-	75g sciroppo di glucosio
+	150g farina di mandorle \index{farina di mandorle}
+	75g sciroppo di glucosio \index{sciroppo di glucosio}
 	50g zucchero a velo
 	5-10g acqua
 	colorante verde
 \columnbreak
 \ingredients[Pan di Spagna:]
 	2 uova
-	60g farina 00
+	60g farina 00 \index{farina}
 	40g zucchero
-	20g maizena
+	20g maizena \index{maizena}
 \ingredients[Crema di ricotta:]
-	400g ricotta di pecora
+	400g ricotta di pecora \index{ricotta}
 	120g zucchero
-	32g cioccolato
+	32g cioccolato \index{cioccolata}
 
 \end{ingreds}
 
