--- a/Ricette/Dolci/cioccolata-in-tazza.tex
+++ b/Ricette/Dolci/cioccolata-in-tazza.tex
@@ -6,11 +6,11 @@
 %\vegetarian
 %\freeze
 \begin{ingreds}
-	45g \index{cioccolato} fondente (75\%)
-	20g \index{cacao} amaro
+	45g cioccolata fondente (75\%) \index{cioccolata}
+	20g cacao amaro \index{cacao}
 	25g zucchero
-	250g \index{latte} intero
-	10g amido di mais (facoltativo)
+	250g latte intero \index{latte}
+	10g amido di mais (facoltativo) \index{maizena}
 	Aromi a piacere (Rum, arancia, cannella, peperoncino, ecc)
 %\columnbreak
 %\ingredients[For the Crumble Mixture:]
