--- a/Ricette/Dolci/crema-pasticcera.tex
+++ b/Ricette/Dolci/crema-pasticcera.tex
@@ -6,10 +6,10 @@
 %\vegetarian
 %\freeze
 \begin{ingreds}
-	\index{latte}
-	\index{uova} (tuorli)
+	latte \index{latte}
+	uova (tuorli) \index{uova}
 	zucchero semolato
-	\index{farina} 00
+	farina 00 \index{farina}
 	aromi (Vaniglia, limone, altro)
 %\columnbreak
 %\ingredients[For the Crumble Mixture:]
