--- a/Ricette/Dolci/nocciolata.tex
+++ b/Ricette/Dolci/nocciolata.tex
@@ -5,9 +5,9 @@
 \autore{Max}
 \begin{ingreds}
 	% Qui gli ingredienti uno sotto all'altro
-	500g di \index{nocciole}
-	1 cucchiaio raso di \index{cacao} amaro
-	50g di \index{cioccolato} (quello che preferisci)
+	500g nocciole \index{nocciole}
+	1 cucchiaio raso di cacao amaro \index{cacao}
+	50g cioccolata (quello che preferisci)  \index{cioccolata} 
 	2 cucchiai di olio e.v.o.
 
 % Se vuoi aggiungere gli ingredienti per una preparazione
