--- a/Ricette/Dolci/pancake.tex
+++ b/Ricette/Dolci/pancake.tex
@@ -4,9 +4,9 @@
 \cooktime{10 minuti}
 \autore{Max}
 \begin{ingreds}
-	200g \index{farina}
-	190g \index{latte} tiepido
-	30g aceto
+	200g farina \index{farina}
+	190g latte tiepido \index{latte}
+	30g aceto \index{aceto}
 	25g zucchero
 	10g lievito per dolci
 	5g bicarbonato
@@ -16,12 +16,12 @@
 	\ingredients[Farcire i pancake]
 	Frutta fresca
 	Nocciolata
-	\index{sciroppo d'acero}
+	sciroppo d'acero \index{sciroppo d'acero}
 	zucchero a velo
 \end{ingreds}
 
 \begin{method}
-Mescola il latte con il resto degli ingredienti liquidi, poi settaccia la farina e il lievito nella bull con i liquidi. Mescola energicamente con la frusta.
+Mescola il latte con il resto degli ingredienti liquidi, poi setaccia la farina e il lievito nella bastardella con i liquidi. Mescola energicamente con la frusta.
 
 Cuoci in padella antiaderente o di ferro senza aggiungere grassi a fuoco medio.
 
