--- a/Ricette/Pane-e-lievitati/crackers-al-sesamo.tex
+++ b/Ricette/Pane-e-lievitati/crackers-al-sesamo.tex
@@ -4,7 +4,7 @@
 \cooktime[Cottura]{30 minuti}
 \autore{Max (Nonna Giuli)}
 \begin{ingreds}
-	280g di \index{farina}
+	280g di farina\index{farina}
 	50g di acqua
 	50g di olio evo
 	100g di vino bianco
