--- a/Ricette/Pane-e-lievitati/pizza-in-teglia.tex
+++ b/Ricette/Pane-e-lievitati/pizza-in-teglia.tex
@@ -6,7 +6,7 @@
 %\vegetarian
 %\freeze
 \begin{ingreds}
-	1kg \index{farina} 1 + manitoba
+	1kg farina 1 + manitoba \index{farina}
 	40g olio e.v.o.
 	20 sale
 	10g lievito di birra secco
