--- a/Ricette/Primi/lasagne.tex
+++ b/Ricette/Primi/lasagne.tex
@@ -7,31 +7,31 @@
 %\freeze
 \begin{ingreds}
 \ingredients[Per la sfoglia:]
-	3 \index{uova}
-	300g \index{farina} 00
+	3 uova\index{uova}
+	300g farina 00\index{farina}
 \ingredients[Per la besciamella:]
-	750g \index{latte} intero
-	75g \index{farina}
-	50g burro
+	750g latte intero\index{latte}
+	75g farina\index{farina}
+	50g burro\index{burro}
 	sale 
-	noce moscata
+	noce moscata\index{noce moscata}
 
 \columnbreak
-	\index{Parmigiano Reggiano} grattugiato
+	Parmigiano Reggiano\index{Parmigiano Reggiano} grattugiato
 
 \ingredients[Per il ragu:]
-	500g di \index{macinato} di manzo
-	1 carota
-	1 gambo di sedano
-	1 cipolla
-	1 bicchiere di vino rosso
-	Passata di pomodoro
+	500g di macinato\index{macinato} di manzo
+	1 carota\index{carota}
+	1 gambo di sedano\index{sedano}
+	1 cipolla\index{cipolla}
+	1 bicchiere di lambrusco\index{lambrusco}
+	passata di pomodoro\index{passata di pomodoro}
 	Aromi a piacere
 
 \end{ingreds}
 
 \begin{method}
-Per prima cosa prepara il \index{ragù}. Fai soffriggere a fuoco vivo la carne macinata, poi aggiungi sedano, carota e cipolla tritati finemente. Quando il tutto è ben rosolato fai sfumare con un bicchiere di vino rocco corposo. Fai evaporare l'alcool e aggiungi poca passata di pomodoro. Aggiungi eventuali aromi (alloro, ginepro, chiudi di garofano). Metti il coperchio e cuoci per un paio d'ore a fuoco molto basso.
+Per prima cosa prepara il ragù\index{ragù}. Fai soffriggere a fuoco vivo la carne macinata, poi aggiungi sedano, carota e cipolla tritati finemente. Quando il tutto è ben rosolato fai sfumare con un bicchiere di vino rocco corposo. Fai evaporare l'alcool e aggiungi poca passata di pomodoro. Aggiungi eventuali aromi (alloro, ginepro, chiudi di garofano). Metti il coperchio e cuoci per un paio d'ore a fuoco molto basso.
 
 Prepara la \index{sfoglia} impastando le uova con la farina. Avvolgi in una pellicola e lascia riposare in frigorifero.
 
