--- a/Ricette/Primi/penne-rosa.tex
+++ b/Ricette/Primi/penne-rosa.tex
@@ -5,10 +5,10 @@
 \autore{Max}
 \begin{ingreds}
 	% Qui gli ingredienti uno sotto all'altro
-	500g penne
-	500g \index{panna} fresca
-	2 fette di \index{pancetta}
-	1 cucchiaio di \index{concentrato di pomodoro}
+	500g penne\index{penne}
+	500g panna\index{panna} fresca
+	2 fette di pancetta\index{pancetta}
+	1 cucchiaio di concentrato di pomodoro\index{concentrato di pomodoro}
 	origano
 	aglio
 
