--- a/Ricette/Primi/pesto-cappelletti.tex
+++ b/Ricette/Primi/pesto-cappelletti.tex
@@ -4,14 +4,14 @@
 \cooktime[]{50 minuti}%<-----Tempo di cottura
 \autore{Max (Nonna Giuli)}
 \begin{ingreds}
-	250g \index{macinato} misto
-	120g \index{gambetto} di prosciutto
-	120g \index{mortadella}
-	sedano
-	cipolla
+	250g macinato\index{macinato} misto
+	120g gambetto\index{gambetto} di prosciutto
+	120g mortadella\index{mortadella}
+	sedano\index{sedano}
+	cipolla\index{cipolla}
 	burro
-	2 \index{uova}
-	\index{Parmigiano Reggiano} grattugiato
+	2 uova\index{uova}
+	Parmigiano Reggiano\index{Parmigiano Reggiano} grattugiato
 	Pangrattato (se necessario)
 
 \end{ingreds}
