--- a/Ricette/Primi/riso-per-sushi.tex
+++ b/Ricette/Primi/riso-per-sushi.tex
@@ -6,7 +6,7 @@
 %\vegetarian
 %\freeze
 \begin{ingreds}
-	500g \index{riso} Roma
+	500g riso Roma\index{riso}
 	Acqua
 \columnbreak
 \ingredients[Condimento per il riso sushi:]
