--- a/Ricette/Salse/salsa-bbq.tex
+++ b/Ricette/Salse/salsa-bbq.tex
@@ -5,14 +5,14 @@
 \autore{Max}
 \begin{ingreds}
 	200g di doppio \index{concentrato di pomodoro}
-	200g di \index{miele}
+	200g di miele\index{miele}
 	130g di aceto di mele
-	70g di \index{salsa worchester}
-	1 cucchiaio di senape
+	70g di salsa worchester\index{salsa worchester}
+	1 cucchiaio di senape\index{senape}
 	40g di zucchero
 	15g di sale
-	1,2g di \index{xantana}
-	mezza \index{cipolla}
+	1,2g di xantana\index{xantana}
+	mezza cipolla\index{cipolla}
 	2 spicchi d'aglio
 	noce moscata
 	pimento o altre spezie a piacere
