--- a/Ricette/Secondi-di-carne/nuggets-di-pollo.tex
+++ b/Ricette/Secondi-di-carne/nuggets-di-pollo.tex
@@ -4,21 +4,21 @@
 \cooktime{4 minuti}
 \autore{Max}
 \begin{ingreds}
-	500g di petto di \index{pollo}
-	45g di \index{cipolla} bianca
+	500g  petto di pollo \index{pollo}
+	45g cipolla bianca \index{cipolla}
 	poco aglio
-	80g di \index{pancarré} o pangrattato
+	80g pancarré o pangrattato \index{pancarré}
 	1 cucchiaino di sale fino
-	1 cucchiaino di senape
+	1 cucchiaino di senape \index{senape}
 	2 cucchiai di salsa di soia
 
 \columnbreak
 \ingredients[Per la panatura:]
-	80g di farina
-	80g di latte
-	1 uovo
+	80g farina \index{farina}
+	80g latte \index{latte}
+	1 uovo \index{uova}
 	un pizzico di sale fino
-	\index{pangrattato}
+	pangrattato \index{pangrattato}
 \end{ingreds}
 
 \begin{method}
