--- a/Ricette/Secondi-di-pesce/baccala-mantecato.tex
+++ b/Ricette/Secondi-di-pesce/baccala-mantecato.tex
@@ -4,11 +4,11 @@
 \cooktime[Cottura]{20 minuti}
 \autore{Max}
 \begin{ingreds}
-	1 filetto di \index{baccalà}
-	500g \index{latte} intero
-	3 spicchi d'aglio
-	1 gambo di sedano
-	1 carota
+	1 filetto di baccalà\index{baccalà}
+	500g latte\index{latte} intero
+	3 spicchi d'aglio\index{aglio}
+	1 gambo di sedano\index{sedano}
+	1 carota\index{carota}
 	mezzo bicchiere di olio e.v.o.
 
 %\columnbreak
