--- a/Ricette/BBQ/bombette-pugliesi.tex
+++ b/Ricette/BBQ/bombette-pugliesi.tex
@@ -4,13 +4,13 @@
 \cooktime[Cottura]{40 minuti}
 \autore{Max}
 \begin{ingreds}
-	12 fette sottili di \index{coppa di maiale}
-	400g di \index{pancetta}
-	prezzemolo
+	12 fette sottili di coppa di maiale \index{coppa di maiale}
+	400g pancetta \index{pancetta}
+	prezzemolo \index{prezzemolo}
 	aglio
 	pepe
 	sale
-	\index{caciocavallo}
+	caciocavallo \index{caciocavallo}
 
 \end{ingreds}
 
