--- a/Ricette/Dolci/bigne.tex
+++ b/Ricette/Dolci/bigne.tex
@@ -6,9 +6,9 @@
 %\vegetarian
 %\freeze
 \begin{ingreds}
-	4 uova (210g)
-	130g \index{farina} 00
-	100g \index{burro}
+	4 uova (210g) \index{uova}
+	130g farina\index{farina} 00
+	100g burro \index{burro}
 	5g zucchero semolato
 	200g acqua
 	un pizzico di sale
