--- a/Ricette/Dolci/gelato-stracciatella-al-basilico.tex
+++ b/Ricette/Dolci/gelato-stracciatella-al-basilico.tex
@@ -6,12 +6,12 @@
 %\vegetarian
 %\freeze
 \begin{ingreds}
-	600g latte scremato
-	140g panna fresca
+	600g latte scremato \index{latte}
+	140g panna fresca \index{panna}
 	160g zucchero
-	160g ricotta
-	4-10 foglie di basilico
-	mandorle
+	160g ricotta \index{ricotta}
+	4-10 foglie di basilico \index{basilico}
+	mandorle \index{mandorle}
 	2g di farina di semi di carrube
 %\columnbreak
 %\ingredients[For the Crumble Mixture:]
