--- a/Ricette/Pane-e-lievitati/panini-hamburger-veloci.tex
+++ b/Ricette/Pane-e-lievitati/panini-hamburger-veloci.tex
@@ -4,9 +4,9 @@
 \cooktime[Cottura]{30 minuti}
 \autore{Max}
 \begin{ingreds}
-	500g di \index{farina} 0
+	500g di farina 0 \index{farina} 
 	250g di acqua fredda
-	30g di \index{strutto}
+	30g di strutto \index{strutto}
 	10g di sale
 	25g di lievito
 \end{ingreds}
