--- a/Ricette/Primi/penne-ubriaca.tex
+++ b/Ricette/Primi/penne-ubriaca.tex
@@ -6,11 +6,11 @@
 %\freeze
 \begin{ingreds}
 	500g di penne
-	500g di \index{panna} fresca
-	2 \index{salsicce}
-	2 fette di \index{speck}
-	1 bottiglia di \index{lambrusco} secco e corposo
-	Parmigiano Reggiano
+	500g di panna\index{panna} fresca
+	2 salsicce\index{salsiccia}
+	2 fette di speck\index{speck}
+	1 bottiglia di lambrusco\index{lambrusco} secco e corposo
+	Parmigiano Reggiano\index{Parmigiano Reggiano}
 %\columnbreak
 %\ingredients[For the Crumble Mixture:]
 
