--- a/Ricette/Primi/risotto-alla-gallinella.tex
+++ b/Ricette/Primi/risotto-alla-gallinella.tex
@@ -4,18 +4,18 @@
 \cooktime[Cottura]{30 minuti}
 \autore{Max}
 \begin{ingreds}
-	350g \index{riso} carnaroli
-	4 \index{gallinelle di mare} di media pezzatura
+	350g riso\index{riso} carnaroli
+	4 gallinelle di mare\index{gallinelle di mare} di media pezzatura
 	1 bicchiere di vino bianco
 	1 scalogno
 	Prezzemolo
 	Scorza di limone
 \columnbreak
 \ingredients[Per il fumetto:]
-	1/2 gambo di sedano
-	1/2 carota
-	1/2 cipolla
-	Peperoncino
+	1/2 gambo di sedano\index{sedano}
+	1/2 carota\index{carota}
+	1/2 cipolla\index{cipolla}
+	Peperoncino\index{peperoncino}
 	1 bicchiere di vino bianco
 	Olio evo 
 
