--- a/Ricette/Salse/cipolle-caramellate.tex
+++ b/Ricette/Salse/cipolle-caramellate.tex
@@ -6,9 +6,9 @@
 %\vegetarian
 %\freeze
 \begin{ingreds}
-	500g di \index{cipolle} rosse
-	100g di zucchero
-	30g di aceto
+	500g cipolle rosse\index{cipolla}
+	100g di zucchero\index{zucchero}
+	30g di aceto\index{aceto}
 	un pizzico di sale
 	olio e.v.o.
 %\columnbreak
