--- a/Ricette/Secondi-di-carne/polpettone.tex
+++ b/Ricette/Secondi-di-carne/polpettone.tex
@@ -4,17 +4,17 @@
 \cooktime{45 minuti}
 \autore{Max}
 \begin{ingreds}
-	600g di \index{macinato} di manzo + una \index{salsiccia} di maiale
-	\index{pecorino} grattugiato
-	\index{Parmigiano Reggiano} grattugiato
+	600g macinato di manzo + una salsiccia di maiale  \index{macinato}\index{salsiccia}
+	pecorino grattugiato \index{pecorino}
+	Parmigiano Reggiano grattugiato \index{Parmigiano Reggiano}
 	pane ammollato nel latte
-	2 \index{uova}
+	2 uova \index{uova}
 	sale
 	pepe
 	prezzemolo, timo o altre erbe aromatiche
-	\index{prosciutto cotto}
-	\index{provola} o scamorza
-	\index{pangrattato}
+	prosciutto cotto\index{prosciutto cotto}
+	provola o scamorza \index{provola}
+	pangrattato \index{pangrattato}
 \end{ingreds}
 
 \begin{method}
