--- a/Ricette/Secondi-di-pesce/tataki-di-tonno-agli-agrumi.tex
+++ b/Ricette/Secondi-di-pesce/tataki-di-tonno-agli-agrumi.tex
@@ -4,7 +4,7 @@
 \cooktime[Cottura]{5 minuti}
 \autore{Max}
 \begin{ingreds}
-	500g di \index{tonno} fresco
+	500g tonno\index{tonno} fresco
 	1 arancia
 	1 rametto di rosmarino
 	1 spicchio d'aglio
@@ -12,12 +12,12 @@
 	sale
 \columnbreak
 \ingredients[Per la salsa:]
-	120g di \index{fagioli} canellini lessati
+	120g di fagioli\index{fagioli} canellini lessati
 	brodo vegetale
-	\index{limone}
+	limone\index{limone}
 	olio evo
 	sale
-	\index{cipolla}
+	cipolla\index{cipolla}
 \end{ingreds}
 
 \begin{method}
