Sistemato ancora indice analitico

--- a/Ricette/BBQ/eliche-di-pollo-al-curry.tex
+++ b/Ricette/BBQ/eliche-di-pollo-al-curry.tex
@@ -7,7 +7,7 @@
 	1 petto di pollo \index{pollo}
 	mezzo cucchiaino di sale
 	un cucchiaino curry \index{curry}
-	olio evo
+	olio evo \index{olio!olio e.v.o.}
 	pangrattato \index{pangrattato}
 \end{ingreds}
 
