--- a/Ricette/CBT/vitello-tonnato-cbt.tex
+++ b/Ricette/CBT/vitello-tonnato-cbt.tex
@@ -6,13 +6,13 @@
 \begin{ingreds}
 	500g girello di vitello \index{girello di vitello}
 	erbe aromatiche
-	maionese \index{maionese}
+	maionese (Vedi ricetta \ref{maionese})\index{maionese}
 	pangrattato \index{pangrattato}
 	peperoncino \index{peperoncino}
 	capperi \index{capperi} sott'aceto
 	acciughe \index{acciughe}
 	cetriolini sott'aceto \index{cetriolini sott'aceto}
-	olio evo
+	olio evo \index{olio!olio e.v.o.}
 \end{ingreds}
 
 \begin{method}
