--- a/Ricette/Dolci/crostata-di-limone.tex
+++ b/Ricette/Dolci/crostata-di-limone.tex
@@ -7,7 +7,7 @@
 %\freeze
 \begin{ingreds}
 	200g mandorle tritate (o farina di mandorle) \index{farina di mandorle}
-	200g zucchero
+	200g zucchero \index{zucchero}
 	3 uova \index{uova}
 	pasta frolla (realizzata con un uovo)
 	buccia di 2 limone
