--- a/Ricette/Dolci/gelato-stracciatella-al-basilico.tex
+++ b/Ricette/Dolci/gelato-stracciatella-al-basilico.tex
@@ -8,11 +8,11 @@
 \begin{ingreds}
 	600g latte scremato \index{latte}
 	140g panna fresca \index{panna}
-	160g zucchero
+	160g zucchero \index{zucchero}
 	160g ricotta \index{ricotta}
 	4-10 foglie di basilico \index{basilico}
 	mandorle \index{mandorle}
-	2g di farina di semi di carrube
+	2g di farina di semi di carrube \index{farina di semi di carrube}
 %\columnbreak
 %\ingredients[For the Crumble Mixture:]
 
