--- a/Ricette/Dolci/nocciolata.tex
+++ b/Ricette/Dolci/nocciolata.tex
@@ -8,7 +8,7 @@
 	500g nocciole \index{nocciole}
 	1 cucchiaio raso di cacao amaro \index{cacao}
 	50g cioccolata (quello che preferisci)  \index{cioccolata} 
-	2 cucchiai di olio e.v.o.
+	2 cucchiai di olio e.v.o. \index{olio!olio e.v.o.}
 
 % Se vuoi aggiungere gli ingredienti per una preparazione
 % specifica della ricetta usa questi 2 comandi
