--- a/Ricette/Pane-e-lievitati/crackers-al-sesamo.tex
+++ b/Ricette/Pane-e-lievitati/crackers-al-sesamo.tex
@@ -6,7 +6,7 @@
 \begin{ingreds}
 	280g di farina\index{farina}
 	50g di acqua
-	50g di olio evo
+	50g di olio evo \index{olio!olio e.v.o.}
 	100g di vino bianco
 	50g di sesamo
 	5g di sale
