--- a/Ricette/Primi/carbonara.tex
+++ b/Ricette/Primi/carbonara.tex
@@ -7,11 +7,11 @@
 %\freeze
 \begin{ingreds}
 	% Qui gli ingredienti uno sotto all'altro
-	500g di spaghetti\index{spaghetti}
+	500g di spaghetti \index{spaghetti}
 	4 tuorli
-	2 uova\index{uova} intere
-	2 fette di guanciale\index{guanciale}
-	100g di pecorino romano\index{pecorino}
+	2 uova intere \index{uova}
+	2 fette di guanciale \index{guanciale}
+	100g di pecorino romano \index{pecorino}
 	pepe nero
 % Se vuoi aggiungere gli ingredienti per una preparazione
 % specifica della ricetta usa questi 2 comandi
