--- a/Ricette/Primi/risotto-alla-gallinella.tex
+++ b/Ricette/Primi/risotto-alla-gallinella.tex
@@ -17,7 +17,7 @@
 	1/2 cipolla\index{cipolla}
 	Peperoncino\index{peperoncino}
 	1 bicchiere di vino bianco
-	Olio evo 
+	Olio evo \index{olio!olio e.v.o.}
 
 \end{ingreds}
 
