--- a/Ricette/Salse/cipolle-caramellate.tex
+++ b/Ricette/Salse/cipolle-caramellate.tex
@@ -10,7 +10,7 @@
 	100g di zucchero\index{zucchero}
 	30g di aceto\index{aceto}
 	un pizzico di sale
-	olio e.v.o.
+	olio e.v.o. \index{olio!olio e.v.o.}
 %\columnbreak
 %\ingredients[For the Crumble Mixture:]
 
