--- a/Ricette/Salse/maionese.tex
+++ b/Ricette/Salse/maionese.tex
@@ -1,4 +1,4 @@
-\recipe[]{Maionese}\label{maionese}
+\recipe[]{Maionese}\label{maionese}\index{maionese}
 \serves{4}
 \preptime{10 minuti}
 \cooktime[Cottura]{3 minuti (versione pastorizzata)}
