--- a/Ricette/Secondi-di-carne/polpettone.tex
+++ b/Ricette/Secondi-di-carne/polpettone.tex
@@ -7,7 +7,7 @@
 	600g macinato di manzo + una salsiccia di maiale  \index{macinato}\index{salsiccia}
 	pecorino grattugiato \index{pecorino}
 	Parmigiano Reggiano grattugiato \index{Parmigiano Reggiano}
-	pane ammollato nel latte
+	pane ammollato nel latte \index{latte}
 	2 uova \index{uova}
 	sale
 	pepe
