--- a/Ricette/Secondi-di-pesce/pesce-spada-al-salmoriglio.tex
+++ b/Ricette/Secondi-di-pesce/pesce-spada-al-salmoriglio.tex
@@ -6,10 +6,10 @@
 \begin{ingreds}
 	\ingredients[Per il salmoriglio:]
 	1 limone con buccia edibile\index{limone}
-	1/2 bicchiere di olio e.v.o.
-	2 foglie di alloro
-	1 spicchio d'aglio
-	origano
+	1/2 bicchiere di olio e.v.o. \index{olio!olio e.v.o.}
+	2 foglie di alloro \index{alloro}
+	1 spicchio d'aglio \index{aglio}
+	origano \index{origano}
 	pepe
 	sale
 \columnbreak
