--- a/Ricette/Pane-e-lievitati/pizza-in-teglia.tex
+++ b/Ricette/Pane-e-lievitati/pizza-in-teglia.tex
@@ -7,7 +7,7 @@
 %\freeze
 \begin{ingreds}
 	1kg farina 1 + manitoba \index{farina}
-	40g olio e.v.o.
+	40g olio e.v.o. \index{olio!olio e.v.o.}
 	20 sale
 	10g lievito di birra secco
 	800g acqua
