--- a/Ricette/Secondi-di-pesce/tataki-di-tonno-agli-agrumi.tex
+++ b/Ricette/Secondi-di-pesce/tataki-di-tonno-agli-agrumi.tex
@@ -8,7 +8,7 @@
 	1 arancia
 	1 rametto di rosmarino
 	1 spicchio d'aglio
-	olio evo
+	olio evo \index{olio!olio e.v.o.}
 	sale
 \columnbreak
 \ingredients[Per la salsa:]
