--- a/Ricette/Cocktails/negroni.tex
+++ b/Ricette/Cocktails/negroni.tex
@@ -5,12 +5,12 @@
 \autore{Max}
 \begin{ingreds}
 \ingredients[Negroni]
-	50ml Gin
-	50ml Vermuth rosso
-	50ml Bitter
-	1 fetta d'arancia
+	50ml Gin \index{gin}
+	50ml Vermuth rosso \index{vermuth}
+	50ml Bitter \index{bitter}
+	1 fetta d'arancia \index{arancia}
 	Scorza d'arancia
-	2 gocce di angostura (opzionali)
+	2 gocce di angostura (opzionali) \index{angostura}
 
 \columnbreak
 
