--- a/Ricette/Secondi-di-carne/nuggets-di-pollo.tex
+++ b/Ricette/Secondi-di-carne/nuggets-di-pollo.tex
@@ -10,7 +10,7 @@
 	80g pancarré o pangrattato \index{pancarré}
 	1 cucchiaino di sale fino
 	1 cucchiaino di senape \index{senape}
-	2 cucchiai di salsa di soia
+	2 cucchiai di salsa di soia \index{salsa di soia}
 
 \columnbreak
 \ingredients[Per la panatura:]
