--- a/Ricette/Cocktails/negroni.tex
+++ b/Ricette/Cocktails/negroni.tex
@@ -25,9 +25,9 @@
 \end{ingreds}
 
 \begin{method}
-Prepara il cocktail direttamente in un bicchiere old fashioned. Metti il giaccio, versa tutti gli ingredienti e mescola. Per l'Americano aggiungi l'acqua tonica solo alla fine.
+Assembla il cocktail direttamente in un bicchiere old fashioned. Metti il giaccio, versa tutti gli ingredienti e mescola leggermente. Per l'Americano aggiungi l'acqua tonica solo alla fine.
 
-Inserisci nel bicchiere una fetta d'arancia e spruzza un po' di scorza di arancia sul bicchiere per profumarlo.
+Inserisci nel bicchiere una fetta d'arancia (indispensabile) e spruzza un po' di scorza di arancia sul bicchiere per profumarlo.
 
 
 \end{method}
