Ricetta: Pork ribs

--- a/appunti-di-cucina.tex
+++ b/appunti-di-cucina.tex
@@ -216,6 +216,7 @@ Tutte queste ricette sono state provate e sono state inserite qui perché mi son
 \input{./Ricette/BBQ/eliche-di-pollo-al-curry}
 \input{./Ricette/BBQ/involtini-alla-siciliana}
 \input{./Ricette/BBQ/pollo-marinato-agli-agrumi}
+\input{./Ricette/BBQ/pork-ribs}
 \input{./Ricette/BBQ/smoked-chicken-wings}
 
 \newpage
