--- a/Ricette/Cocktails/negroni.tex
+++ b/Ricette/Cocktails/negroni.tex
@@ -6,7 +6,7 @@
 \begin{ingreds}
 \ingredients[Negroni]
 	50ml Gin \index{gin}
-	50ml Vermuth rosso \index{vermuth}
+	50ml Vermouth rosso \index{vermouth}
 	50ml Bitter \index{bitter}
 	1 fetta d'arancia \index{arancia}
 	Scorza d'arancia
@@ -16,7 +16,7 @@
 
 \ingredients[Americano]
 	50ml Acqua tonica
-	50ml Vermuth rosso
+	50ml Vermouth rosso
 	50ml Bitter
 	1 fetta d'arancia
 	Scorza d'arancia
