--- a/appunti-di-cucina.tex
+++ b/appunti-di-cucina.tex
@@ -239,6 +239,7 @@ Tutte queste ricette sono state provate e sono state inserite qui perché mi son
 \input{./Ricette/Dolci/pancake}
 
 \chapter{Cocktails}
+\input{./Ricette/Cocktails/gin}
 \input{./Ricette/Cocktails/negroni}
 
 
