--- a/Ricette/Cocktails/gin.tex
+++ b/Ricette/Cocktails/gin.tex
@@ -17,7 +17,7 @@
 \end{ingreds}
 
 \begin{method}
-\underline{Gin \#1}. Il giorno 8/12/2022 ho messo in infusione: 340g di tequila Explolon; 5,5g di bacche di ginepro leggermente schiacciate; 1g di pepe di sichuan; 1,2g di pepe nero; 1,2g di cannella.
+\underline{Gin \#1}. Il giorno 8/12/2022 ho messo in infusione: 340g di tequila Espolòn; 5,5g di bacche di ginepro leggermente schiacciate; 1g di pepe di sichuan; 1,2g di pepe nero; 1,2g di cannella; 1g di radice di angelica. Dopo 12 ore ho aggiunto la scorza fresca di mezzo arancio. Lascio macerare per 12 ore poi filtro.
 
 % Esempio di tabella ---------->
 %\begin{table}[h]
