--- a/Ricette/Cocktails/vermouth.tex
+++ b/Ricette/Cocktails/vermouth.tex
@@ -20,7 +20,7 @@
 
 
 \begin{method}
-\underline{Vermounth \#1}. Il 9/12/2022 ho messo in infusione: 750ml di Valpollicella Classico Brunelli vendemmia 2021 (13\% vol), 15g di artemisia vulgaris, 2g cannella, 1g di chiodi di garofano, 0,5g di noce moscata tritata al mortaio, 2g di pepe di sichuan (di cui 1g tritato al mortaio), 6 bacche di cardamomo. Dopo 24 ore aggiungo alcool e zucchero.
+\underline{Vermounth \#1}. Il 9/12/2022 ho messo in infusione: 750ml di Valpollicella Classico Brunelli vendemmia 2021 (13\% vol), 15g di artemisia vulgaris, 2g cannella, 1g di chiodi di garofano, 0,5g di noce moscata tritata al mortaio, 2g di pepe di sichuan (di cui 1g tritato al mortaio), 6 bacche di cardamomo. Dopo 24 ore ho aggiunto 112g di Vodka Stolichnaya e 112g di zucchero semolato. Ora lascio in infusione per 10 giorni.
 
 Su 1l di vino aggiungono 150g di zucchero e 150g di grappa.
 
